# tinyretro

./: CMakeLists.txt  README
include/: libretro.h
src/: core.cpp  core.hpp  main.cpp
